--- a/index.html
+++ b/index.html
@@ -11,3 +11,14 @@
         <h1>Gerador de tabuada</h1>
 
 label for=numeroinput">Digite um numero:</1abel>
+<input type=" "number" id=" "numeroInput" placeholder=""Ex.: 7">
+<button id-"gerarBotao">Gerar Tabuada</button>button>
+
+<!-- Aqui irá mostrar a tabuada. -->
+ <div id=""resultadoTabuada"></div>
+
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
